# Equinox

./: .clang-format  .clang-tidy  .geminiignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING.md  GEMINI.md  PROJECT_TODO.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: macos-ci.yml
src/: Main.cpp
src/dsp/: AudioEngine.cpp  AudioEngine.h  ConvolutionProcessor.h  CrossfeedProcessor.h  FilterProcessor.cpp  FilterProcessor.h  InternalEqProcessor.h  LimiterProcessor.h  LoudnessProcessor.h  ProfileManager.cpp  ProfileManager.h
src/ui/: GraphicEqComponent.cpp  GraphicEqComponent.h  MainComponent.cpp  MainComponent.h  MenuBarIcon.cpp  MenuBarIcon.h  OscilloscopeComponent.h  ParametricCurveComponent.cpp  ParametricCurveComponent.h  TahoeLookAndFeel.h
tests/: DspTests.cpp  NewProcessorTests.cpp
